# Event+/webapi.event+/bin/Release/net7.0/swagger.json
@@ -10,6 +10,33 @@
     "version": "v1"
   },
   "paths": {
+    "/api/ComentariosEvento/ComentarioIA": {
+      "post": {
+        "tags": [
+          "ComentariosEvento"
+        ],
+        "consumes": [
+          "application/json-patch+json",
+          "application/json",
+          "text/json",
+          "application/*+json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "schema": {
+              "$ref": "#/definitions/ComentariosEvento"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
     "/api/ComentariosEvento": {
       "get": {
         "tags": [
@@ -47,8 +74,36 @@
         }
       }
     },
-    "/api/ComentariosEvento/BuscarPorIdUsuario/{id}": {
+    "/api/ComentariosEvento/BuscarPorIdUsuario": {
       "get": {
+        "tags": [
+          "ComentariosEvento"
+        ],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "idUsuario",
+            "type": "string",
+            "format": "uuid",
+            "collectionFormat": "multi"
+          },
+          {
+            "in": "query",
+            "name": "idEvento",
+            "type": "string",
+            "format": "uuid",
+            "collectionFormat": "multi"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
+    "/api/ComentariosEvento/{id}": {
+      "delete": {
         "tags": [
           "ComentariosEvento"
         ],
@@ -68,8 +123,8 @@
         }
       }
     },
-    "/api/ComentariosEvento/{id}": {
-      "delete": {
+    "/api/ComentariosEvento/ListarSomenteExibe{id}": {
+      "get": {
         "tags": [
           "ComentariosEvento"
         ],
@@ -127,6 +182,18 @@
       }
     },
     "/api/Evento/ListarProximos": {
+      "get": {
+        "tags": [
+          "Evento"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
+    "/api/Evento/ListarAnteriores": {
       "get": {
         "tags": [
           "Evento"
